WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212829
Accessibility isolated tree mode: crashes when navigating websites, com.apple.AppKit: ConvertOutgoingValueForAttribute.
https://bugs.webkit.org/show_bug.cgi?id=212829
Summary
Accessibility isolated tree mode: crashes when navigating websites, com.apple...
Andres Gonzalez
Reported
2020-06-05 09:31:11 PDT
Accessibility isolated tree mode: crashes when navigating websites, com.apple.AppKit: ConvertOutgoingValueForAttribute.
Attachments
Patch
(5.70 KB, patch)
2020-06-05 09:40 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-06-05 09:40:49 PDT
Created
attachment 401164
[details]
Patch
Andres Gonzalez
Comment 2
2020-06-05 09:43:04 PDT
<
rdar://problem/63756267
>
EWS
Comment 3
2020-06-05 11:06:03 PDT
Committed
r262635
: <
https://trac.webkit.org/changeset/262635
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401164
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug