Accessibility isolated tree mode: crashes when navigating websites, com.apple.AppKit: ConvertOutgoingValueForAttribute. https://bugs.webkit.org/show_bug.cgi?id=212829 <rdar://problem/63756267>

Reviewed by Chris Fleizach.

- [WebAccessibilityObjectWrapper textMarkerRangeFromVisiblePositions] must
retrieve an autoreleased id from the main thread.
- [WebAccessibilityObjectWrapper textMarkerRangeForSelection] must also
retrieve an autoreleased id from the main thread.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper textMarkerRangeFromVisiblePositions:endPosition:]):
(-[WebAccessibilityObjectWrapper textMarkerRangeForSelection]):
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):


Canonical link: https://commits.webkit.org/225638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262635 268f45cc-cd09-0410-ab3c-d52691b4dbfc